# neurogrow

./: .gitignore  main.py  pyproject.toml  pytest.ini
neurogrow/: __init__.py  data.py  model.py
neurogrow/scripts/: setup_data.py  train.py
tests/: conftest.py  test_data.py  test_lightning.py  test_model.py  test_training.py
